CorePackage/main/default/objects/Skill__c/Skill__c.object-meta.xml
<CustomObject>
    <label>Skill</label>
    <nameField>
        <label>Skill Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Skills</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>