CorePackage/main/default/objects/Skill__c/fields/Assigments__c.field-meta.xml
<CustomField>
    <fullName>Assigments__c</fullName>
    <description>Assignments for the Skills in Trial of the Titans</description>
    <label>Assigments</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>