CorePackage/main/default/objects/Skill__c/fields/Skill_Breakdown__c.field-meta.xml
<CustomField>
    <fullName>Skill_Breakdown__c</fullName>
    <description>Text to describe the skill of a Titan in Trial of the Titans</description>
    <label>Skill Breakdown</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>