CorePackage/main/default/objects/Skill__c/fields/Skill_Type__c.field-meta.xml
<CustomField>
    <fullName>Skill_Type__c</fullName>
    <description>Type of skill for Skills in Trial of The Titans</description>
    <label>Skill Type</label>
    <required>true</required>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Coding</fullName>
            </value>
            <value>
                <fullName>Soft Skills</fullName>
            </value>
            <value>
                <fullName>Exams</fullName>
            </value>
            <value>
                <fullName>Data Management</fullName>
            </value>
            <value>
                <fullName>Design</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>