CorePackage/main/default/objects/Skill__c/fields/Titan__c.field-meta.xml
<CustomField>
    <fullName>Titan__c</fullName>
    <label>Titan</label>
    <referenceTo>Titan__c</referenceTo>
    <relationshipLabel>Skills</relationshipLabel>
    <relationshipName>Skills</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>